--- a/offworld_gym/config/settings.yaml
+++ b/offworld_gym/config/settings.yaml
@@ -1,5 +1,6 @@
 application:
   dev:
+    debug_true: True
     log:
       disable_file_log_stream: False
       log_folder: "logs"
@@ -7,3 +8,7 @@ application:
       log_server_ip: "192.168.1.151"
     gym_server:
       server_ip: "192.168.1.151"
+      secured_port: 8443
+    user:
+      username: "gymuser1"
+      password: "yYs9kHDHE9wb3WUJXgKebKMDmCJyZFR3"
