--- a/offworld_gym/envs/real/config/settings.yaml
+++ b/offworld_gym/envs/real/config/settings.yaml
@@ -5,7 +5,7 @@ application:
       disable_file_log_stream: true
       log_folder: "logs"
       disable_network_log_stream: true
-      log_server_ip: "192.168.1.151"
+      log_server_ip: "offworldgymserver.com"
     gym_server:
-      server_ip: "192.168.1.151"
+      server_ip: "offworldgymserver.com"
       secured_port: 5000
