Api token authentication, web token communication

--- a/offworld_gym/envs/real/config/settings.yaml
+++ b/offworld_gym/envs/real/config/settings.yaml
@@ -1,6 +1,5 @@
 application:
   dev:
-    debug_true: True
     log:
       disable_file_log_stream: true
       log_folder: "logs"
@@ -9,3 +8,6 @@ application:
     gym_server:
       server_ip: "offworldgymserver.com"
       secured_port: 8443
+    user:
+      api_token: "ImFhc2Rhc0Bhc2RhLmNvbTphc2Rhc3Nkc2Ei.XU0OIg.BP7pPrBRmuv7UgPn8TdF49i2Lu8"
+    
