--- a/offworld_gym/envs/real/config/settings.yaml
+++ b/offworld_gym/envs/real/config/settings.yaml
@@ -7,5 +7,7 @@ application:
       disable_network_log_stream: true
       log_server_ip: "offworldgymserver.com"
     gym_server:
+      protocol: https
       server_ip: "offworldgymserver.com"
       secured_port: 8443
+d
