--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ services:
   ow_gym_sim:
     build:
       context: ./
-      dockerfile: ./Dockerfile
+      dockerfile: offworld_gym/envs/gazebo_docker/Dockerfile
     image: offworldai/offworld-gym:latest
 
