--- a/offworld_gym/envs/gazebo_docker/Dockerfile
+++ b/offworld_gym/envs/gazebo_docker/Dockerfile
@@ -20,6 +20,44 @@ RUN apt-get install -y -q gnupg2 apt-utils lsb-core lsb-release software-propert
 RUN apt-get clean all 
 RUN apt-get install -y -q nano net-tools xvfb tmux glew-utils mesa-utils
 
+# Install Python3.8
+RUN add-apt-repository ppa:deadsnakes/ppa \
+	&& apt-get update \
+	&& apt-get install -y python3.8 python3.8-dev 
+
+# Install Offworld Client Library and Python dependecies
+RUN cd offworld-gym/scripts
+RUN export OFFWORLD_GYM_ROOT=`pwd`/..
+RUN apt install -y libbullet-dev python-pip git curl wget
+RUN export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/python3/bin
+RUN curl https://bootstrap.pypa.io/get-pip.py | sudo -H python3.8
+
+RUN pip3.8 install --user --upgrade setuptools      
+RUN pip3.8 install --user --upgrade pip
+RUN pip3.8 install --user --upgrade numpy
+RUN pip3.8 install --user --upgrade scipy
+RUN pip3.8 install --user --upgrade opencv-python
+RUN pip3.8 install --user --upgrade catkin_pkg
+RUN pip3.8 install --user --upgrade empy
+RUN pip3.8 install --user --upgrade requests
+RUN pip3.8 install --user --upgrade defusedxml 
+RUN pip3.8 install --user --upgrade rospkg
+RUN pip3.8 install --user --upgrade matplotlib
+RUN pip3.8 install --user --upgrade netifaces
+RUN pip3.8 install --user --upgrade regex
+RUN pip3.8 install --user --upgrade psutil
+RUN pip3.8 install --user --upgrade gym
+RUN pip3.8 install --user --upgrade python-socketio
+RUN pip3.8 install --user --upgrade scikit-image
+RUN pip3.8 install --user --upgrade pyquaternion
+RUN pip3.8 install --user --upgrade imageio
+RUN pip3.8 install --user docker
+
+RUN cd $OFFWORLD_GYM_ROOT
+RUN pip3.8 install --user -e .
+RUN chmod +x /offworld-gym/offworld_gym/envs/gazebo_docker/docker_entrypoint.sh
+
+
 # Install ROS Gazebo and other Python dependencies
 ENV DEBIAN_FRONTEND=noninteractive
 #RUN ./scripts/install-real-and-sim.sh install_ros_dep_lib
@@ -33,15 +71,17 @@ RUN apt install -y python3-rosdep
 RUN rosdep init
 RUN sudo rosdep fix-permissions
 RUN rosdep update
+RUN source /opt/ros/Noetic/setup.bash
 
 ## Gazebo and nvm
+ENV PATH "/root/.local/bin:$PATH"
 ENV NVM_DIR /usr/local/nvm
 ENV NODE_VERSION 8.17.0
 
 # Replace shell with bash so we can source files
 RUN rm /bin/sh && ln -s /bin/bash /bin/sh
 
-RUN apt-get install -y libjansson-dev npm libboost-dev imagemagick libtinyxml-dev mercurial cmake build-essential libignition-math2-dev
+RUN apt-get install -y libjansson-dev npm libboost-dev imagemagick libtinyxml-dev mercurial cmake build-essential 
 
 # Install nvm with node and npm
 RUN curl https://raw.githubusercontent.com/creationix/nvm/v0.30.1/install.sh | bash \
@@ -53,7 +93,7 @@ RUN curl https://raw.githubusercontent.com/creationix/nvm/v0.30.1/install.sh | b
     && git clone https://github.com/osrf/gzweb \
     && cd gzweb \
     && git checkout gzweb_1.4.0 \
-    && source /offworld-gym/scripts/gymshell.sh \
+    # && source /offworld-gym/scripts/gymshell.sh \
     && source /usr/share/gazebo/setup.sh \
     && mkdir -p /gzweb/http/client/assets/ \
     && npm run deploy --- -m local
@@ -61,59 +101,16 @@ RUN curl https://raw.githubusercontent.com/creationix/nvm/v0.30.1/install.sh | b
 ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
 ENV PATH      $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
+# Additional ENV Variables to separete elements of PYTHONPATH dependencies among the specific systems that require them.
+# (May have unnecessary elements in these paths, e.g. catkin_ws packages)
 
-# RUN git clone -b fix/new-reward-logic-for-monolith https://github.com/offworld-projects/offworld-gym.git 
+# Appended to the python system path at runtime to import ROS python modules regardless of existing env setup.
+ENV GAZEBO_GYM_PYTHON_DEPENDENCIES /offworld-gym/offworld_gym/envs/gazebo/catkin_ws/devel/lib/python3/dist-packages:/opt/ros/noetic/lib/python3.8/dist-packages
 
-# WORKDIR /offworld-gym/scripts 
-
-# ENV PATH "/root/.local/bin:$PATH"
-
-
-
-# RUN pip3.6 install --user docker
-# 	# adding this pip install here because we probably will want to separate docker env install from other env installs later
-
-# RUN cd /offworld-gym \
-# 	&& git pull \
-# 	&& git checkout origin/main \
-# 	&& chmod +x /offworld-gym/offworld_gym/envs/gazebo_docker/docker_entrypoint.sh
-
-# # Additional ENV Variables to separete elements of PYTHONPATH dependencies among the specific systems that require them.
-# # (May have unnecessary elements in these paths, e.g. catkin_ws packages)
-
-# # Appended to the python system path at runtime to import ROS python modules regardless of existing env setup.
-# ENV GAZEBO_GYM_PYTHON_DEPENDENCIES /offworld-gym/offworld_gym/envs/gazebo/catkin_ws/devel/lib/python3/dist-packages:/opt/ros/kinetic/lib/python2.7/dist-packages
-
-# # Replaces PYTHONPATH in the subprocess that calls roslaunch within a Gazebo Gym (So that your python3 site-packages don't get imported by accident)
-# ENV ROSLAUNCH_PYTHONPATH_OVERRIDE /opt/ros/kinetic/lib/python2.7/dist-packages:/offworld-gym/offworld_gym/envs/gazebo/catkin_ws/devel/lib/python3/dist-packages
-
-# ENV NVM_DIR /usr/local/nvm
-# ENV NODE_VERSION 8.17.0
-
-# # Replace shell with bash so we can source files
-# RUN rm /bin/sh && ln -s /bin/bash /bin/sh
-
-# RUN apt-get install -y libjansson-dev npm libboost-dev imagemagick libtinyxml-dev mercurial cmake build-essential libignition-math2-dev
-
-# # Install nvm with node and npm
-# RUN curl https://raw.githubusercontent.com/creationix/nvm/v0.30.1/install.sh | bash \
-#     && source $NVM_DIR/nvm.sh \
-#     && nvm install $NODE_VERSION \
-#     && nvm alias default $NODE_VERSION \
-#     && nvm use default \
-#     && cd / \
-#     && git clone https://github.com/osrf/gzweb \
-#     && cd gzweb \
-#     && git checkout gzweb_1.4.0 \
-#     && source /offworld-gym/scripts/gymshell.sh \
-#     && source /usr/share/gazebo/setup.sh \
-#     && mkdir -p /gzweb/http/client/assets/ \
-#     && npm run deploy --- -m local
-
-# ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
-# ENV PATH      $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
+# Replaces PYTHONPATH in the subprocess that calls roslaunch within a Gazebo Gym (So that your python3 site-packages don't get imported by accident)
+ENV ROSLAUNCH_PYTHONPATH_OVERRIDE /opt/ros/noetic/lib/python3.8/dist-packages:/offworld-gym/offworld_gym/envs/gazebo/catkin_ws/devel/lib/python3/dist-packages
 
 
-# # 2nd line below is a hack. Something in the original astra_minimal.dae causes rendering to crash in chrome, but astra.dae works.
-# RUN cp -r /offworld-gym/offworld_gym/envs/gazebo/catkin_ws/src/rosbot_description/src/rosbot_description /gzweb/http/client/assets/ \
-#     && cp /gzweb/http/client/assets/rosbot_description/meshes/astra.dae /gzweb/http/client/assets/rosbot_description/meshes/astra_minimal.dae
+# 2nd line below is a hack. Something in the original astra_minimal.dae causes rendering to crash in chrome, but astra.dae works.
+RUN cp -r /offworld-gym/offworld_gym/envs/gazebo/catkin_ws/src/rosbot_description/src/rosbot_description /gzweb/http/client/assets/ \
+    && cp /gzweb/http/client/assets/rosbot_description/meshes/astra.dae /gzweb/http/client/assets/rosbot_description/meshes/astra_minimal.dae
