--- a/offworld_gym/envs/gazebo/catkin_ws/src/gym_offworld_monolith/package.xml
+++ b/offworld_gym/envs/gazebo/catkin_ws/src/gym_offworld_monolith/package.xml
@@ -61,6 +61,8 @@
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
