--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,10 @@ PyYAML
 tlslite-ng
 gym>=0.12.0
 pyquaternion==0.9.5
-numpy
+numpy>=1.18.0
 scipy
 opencv-python-headless
 termcolor
 matplotlib
 pynput
+importlib-metadata>=4.11.2
