--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,8 @@ requests==2.27.1
 roslibpy==1.3.0
 scipy==1.8.0
 six==1.16.0
+tianshou==0.4.7
+torch==1.11.0
 Twisted==22.2.0
 txaio==22.2.1
 typing_extensions==4.1.1
