--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pycparser~=2.21
 pyparsing~=3.0.7
 pyquaternion~=0.9.9
 python-dateutil~=2.8.2
+PyYAML~=6.0
 requests~=2.27.1
 roslibpy~=1.3.0
 scipy>=1.7.0
